--- a/.github/workflows/pmd-analysis.yml
+++ b/.github/workflows/pmd-analysis.yml
@@ -1,19 +1,2 @@
-name: PMD Check
-on: 
-  pull_request: 
-    branches: [ dev ] # Only run for PRs targeting OrgSource
-jobs:
-  pmd:
-    runs-on: ubuntu-latest
-    permissions: read-all
-    steps:
-      - uses: actions/checkout@v2
-      - name: Run PMD
-        uses: pmd/pmd-github-action@v2
-        with:
-          rulesets: 'config/ruleset.xml' # Adjust path if your ruleset.xml is elsewhere
-          sourcePath: 'force-app/main/default'
-          version: latest
-          analyzeModifiedFilesOnly: true
-          createGitHubAnnotations: true
-          uploadSarifReport: false
+- name: Run Salesforce Code Analyzer
+  uses: forcedotcom/run-code-analyzer@v2.4.0
