Reorganize pmd-analysis.yml to correctly define event triggers for Salesforce Code Analyzer

--- a/.github/workflows/pmd-analysis.yml
+++ b/.github/workflows/pmd-analysis.yml
@@ -1,2 +1,5 @@
 - name: Run Salesforce Code Analyzer
-  uses: forcedotcom/run-code-analyzer@v2.4.0
+on:
+  pull_request:
+    branches: [ dev ] # Only run for PRs targeting OrgSource
+uses: forcedotcom/run-code-analyzer@v2.4.0
