--- a/.github/workflows/pmd-analysis.yml
+++ b/.github/workflows/pmd-analysis.yml
@@ -1,4 +1,4 @@
-- name: Run Salesforce Code Analyzer
+name: Run Salesforce Code Analyzer
 on:
   pull_request:
     branches: [ dev ] # Only run for PRs targeting OrgSource
