--- a/.github/workflows/pmd-analysis.yml
+++ b/.github/workflows/pmd-analysis.yml
@@ -94,7 +94,7 @@ jobs:
           # Generate package.xml for changed components
           sf sgd:source:delta \
             --to $HEAD_BRANCH \
-            --from $BASE_BRANCH \
+            --from origin/$BASE_BRANCH \
             --output-dir delta \
             --generate-delta
 
