--- a/.github/workflows/pmd-analysis.yml
+++ b/.github/workflows/pmd-analysis.yml
@@ -122,14 +122,14 @@ jobs:
           echo "Starting validation deployment..."
           
           # Run validation with test execution
-          VALIDATION_RESULT=$(sf project deploy validate \
+          sf project deploy validate \
             --manifest delta/package/package.xml \
             --target-org target-org \
             --test-level RunLocalTests \
             --wait 30 \
-            --json)
+            --json
 
           # Extract the 'id' field from the JSON output & Store the ID as a step output
-          DEPLOY_ID=$(echo "$VALIDATION_RESULT" | jq -r '.result.id')
-          echo "validation_id=$DEPLOY_ID" >> $GITHUB_OUTPUT
-          echo "Validation ID: $DEPLOY_ID"
+          #DEPLOY_ID=$(echo "$VALIDATION_RESULT" | jq -r '.result.id')
+          #echo "validation_id=$DEPLOY_ID" >> $GITHUB_OUTPUT
+          #echo "Validation ID: $DEPLOY_ID"
