Update branch trigger format in pmd-analysis.yml and modify comment in PMDLoopDemo.cls

--- a/.github/workflows/pmd-analysis.yml
+++ b/.github/workflows/pmd-analysis.yml
@@ -3,8 +3,7 @@ on:
   pull_request:
     branches: [ dev ] # Only run for PRs targeting OrgSource
   push:
-    branches:
-      - dev
+    branches: [ dev ]
 jobs:
   salesforce-code-analyzer-workflow:
     permissions:
