--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,7 @@
-name: Deploy to Salesforce
+name: Run Salesforce Code Analyzer
 on:
   pull_request:
-    branches: [ dev ] # Only run for PRs targeting OrgSource
-    types:
-      - closed
+    branches: [ dev ] # Only run for PRs
 jobs:
   salesforce-code-analyzer-workflow:
     permissions:
@@ -79,15 +77,60 @@ jobs:
       # Verify authentication
       - name: Verify Authentication
         run: |
-          sf org display --target-org target-org      
+          sf org display --target-org target-org
 
-      # Quick Deploy using Validation ID
-      - name: Deploy to Target Org
-        if: github.event.pull_request.merged == true
+      # Generate delta package.xml using git diff
+      - name: Generate Delta Package
         run: |
-          echo "Starting quick deployment using ID: ${{ steps.validate_step.outputs.validation_id }}"
-          sf project deploy quick \
-            #--deploy-id ${{ steps.validate_step.outputs.validation_id }} \
-            --target-org target-org --use-most-recent \
+          # Get the base branch (main/master)
+          BASE_BRANCH="${{ github.event.pull_request.base.ref }}"
+          HEAD_BRANCH="${{ github.event.pull_request.head.sha }}"
+          
+          echo "Generating delta package between $BASE_BRANCH and $HEAD_BRANCH"
+          
+          # Create delta directory
+          mkdir -p delta
+          
+          # Generate package.xml for changed components
+          sf sgd:source:delta \
+            --to $HEAD_BRANCH \
+            --from origin/$BASE_BRANCH \
+            --output-dir delta \
+            --generate-delta
+
+          # Display generated package.xml
+          echo "Generated package.xml:"
+          if [ -f "delta/package/package.xml" ]; then
+            cat delta/package/package.xml
+          else
+            echo "No package.xml generated"
+          fi
+          
+          # Check if there are any changes to deploy
+          if [ ! -f "delta/package/package.xml" ] || [ ! -s "delta/package/package.xml" ]; then
+            echo "No metadata changes detected"
+            echo "SKIP_DEPLOYMENT=true" >> $GITHUB_ENV
+          else
+            echo "SKIP_DEPLOYMENT=false" >> $GITHUB_ENV
+          fi
+
+      # Validate deployment (Check Only)
+      - name: Validate Deployment
+        id: validate_step # Assign an ID to this step to access its outputs
+        if: env.SKIP_DEPLOYMENT == 'false'
+        run: |
+          echo "Starting validation deployment..."
+          
+          # Run validation with test execution
+          sf project deploy validate \
+            --manifest delta/package/package.xml \
+            --target-org target-org \
+            --test-level RunLocalTests \
             --wait 30 \
-            --verbose
+            --json --concise
+
+          # Extract the 'id' field from the JSON output & Store the ID as a step output
+          #DEPLOY_ID=$(echo "$VALIDATION_RESULT" | jq -r '.result.id')
+          #echo "validation_id=$DEPLOY_ID" >> $GITHUB_OUTPUT
+          #echo "Validation ID: $DEPLOY_ID"
+          echo "Validation deployment completed."
