--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,15 +122,15 @@ jobs:
           echo "Starting validation deployment..."
           
           # Run validation with test execution
-          sf project deploy validate \
+          VALIDATION_RESULT=$(sf project deploy validate \
             --manifest delta/package/package.xml \
             --target-org target-org \
             --test-level RunLocalTests \
             --wait 30 \
-            --json --concise
+            --json --concise)
 
           # Extract the 'id' field from the JSON output & Store the ID as a step output
-          #DEPLOY_ID=$(echo "$VALIDATION_RESULT" | jq -r '.result.id')
-          #echo "validation_id=$DEPLOY_ID" >> $GITHUB_OUTPUT
-          #echo "Validation ID: $DEPLOY_ID"
+          DEPLOY_ID=$(echo "$VALIDATION_RESULT" | jq -r '.result.id')
+          echo "validation_id=$DEPLOY_ID" >> $GITHUB_OUTPUT
+          echo "Validation ID: $DEPLOY_ID"
           echo "Validation deployment completed."
