--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,17 +122,17 @@ jobs:
           echo "Starting validation deployment..."
           
           # Run validation with test execution
-          VALIDATION_RESULT=$(sf project deploy validate \
+          sf project deploy validate \
             --manifest delta/package/package.xml \
             --target-org target-org \
             --test-level RunLocalTests \
             --wait 30 \
             --json --concise)
-
+            
           # Extract the 'id' field from the JSON output & Store the ID as a step output
-            DEPLOY_ID=$(echo "$VALIDATION_RESULT" | jq -r '.result.id')
+            #DEPLOY_ID=$(echo "$VALIDATION_RESULT" | jq -r '.result.id')
             # Store deploy ID in an artifact file
-            echo "$DEPLOY_ID" > deploy_id.txt
-            echo "validation_id=$DEPLOY_ID" >> $GITHUB_OUTPUT
-            echo "Validation ID: $DEPLOY_ID"
+            #echo "$DEPLOY_ID" > deploy_id.txt
+            #echo "validation_id=$DEPLOY_ID" >> $GITHUB_OUTPUT
+            #echo "Validation ID: $DEPLOY_ID"
             echo "Validation deployment completed."
