--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,47 @@ jobs:
           python-version: '>=3.10'
 
       - name: Install Salesforce CLI
-        run: npm install -g @salesforce/cli@latest  
+        run: npm install -g @salesforce/cli@latest
+
+        # Install SFDX Git Delta for package.xml generation
+      - name: Install SFDX Git Delta
+        run: |
+          echo y | sf plugins install sfdx-git-delta
+
+          # Generate delta package.xml using git diff
+      - name: Generate Delta Package
+        run: |
+          # Get the base branch (main/master)
+          BASE_BRANCH="${{ github.event.pull_request.base.ref }}"
+          HEAD_BRANCH="${{ github.event.pull_request.head.sha }}"
+          
+          echo "Generating delta package between $BASE_BRANCH and $HEAD_BRANCH"
+          
+          # Create delta directory
+          mkdir -p delta
+          
+          # Generate package.xml for changed components
+          sf sgd:source:delta \
+            --to $HEAD_BRANCH \
+            --from origin/$BASE_BRANCH \
+            --output-dir delta \
+            --generate-delta
+
+          # Display generated package.xml
+          echo "Generated package.xml:"
+          if [ -f "delta/package/package.xml" ]; then
+            cat delta/package/package.xml
+          else
+            echo "No package.xml generated"
+          fi
+          
+          # Check if there are any changes to deploy
+          if [ ! -f "delta/package/package.xml" ] || [ ! -s "delta/package/package.xml" ]; then
+            echo "No metadata changes detected"
+            echo "SKIP_DEPLOYMENT=true" >> $GITHUB_ENV
+          else
+            echo "SKIP_DEPLOYMENT=false" >> $GITHUB_ENV
+          fi
       
       # Create JWT key file from secret
       - name: Create JWT Key File
@@ -56,12 +96,14 @@ jobs:
         run: |
           sf org display --target-org target-org      
 
-      # Quick Deploy using Validation ID
+      # SF Deploy
       - name: Deploy to Target Org
         if: github.event.pull_request.merged == true
         run: |
-          echo "Starting quick deployment using ID: ${{ steps.validate_step.outputs.validation_id }}"
-          sf project deploy quick \
-            --target-org target-org --use-most-recent \
+          echo "Starting deployment"
+          sf project deploy start \
+            --manifest delta/package/package.xml \
+            --test-level NoTestRun
+            --target-org target-org\
             --wait 30 \
             --verbose
