--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Run Salesforce Code Analyzer
+name: Run Salesforce Code Analyzer & Apex Test execution
 on:
   pull_request:
     branches: [ dev ] # Only run for PRs
